Query functionality added to Servlet

--- a/querybook.html
+++ b/querybook.html
@@ -6,7 +6,7 @@
 		<h2>Yet Another e-BookStore</h2>
 		<form method="get" action="http://localhost:8080/ebookshop/query">
 			Choose an author: <br><br>
-			<input type="checkbox" name="author" value="Ah Teck" />Ah Teck
+			<input type="checkbox" name="author" value="Tan Ah Teck" />Ah Teck
 			<input type="checkbox" name="author" value="Mohammad Ali" />Mohammad Ali
 			<input type="checkbox" name="author" value="Kumar" />Kumar
 			<input type="submit" value="Search" />
