--- a/querybook.html
+++ b/querybook.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<h2>Yet Another e-BookStore</h2>
-		<form method="get" action="query">
+		<form method="get" action="querymv">
 			Choose an author: <br><br>
 			<input type="checkbox" name="author" value="Tan Ah Teck" />Ah Teck
 			<input type="checkbox" name="author" value="Mohammad Ali" />Mohammad Ali
